// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PersonLink > no display name, only email 1`] = `
<DocumentFragment>
  <span
    class="a"
  >
    alice@example.com
  </span>
</DocumentFragment>
`;

exports[`PersonLink > no user account 1`] = `
<DocumentFragment>
  <span
    class="a"
  >
    alice
  </span>
</DocumentFragment>
`;

exports[`PersonLink > with user account 1`] = `
<DocumentFragment>
  <a
    class="a b"
    href="u"
  >
    Alice Smith
  </a>
</DocumentFragment>
`;
